# rename-cpp

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cpp.yml
src/: main.cpp
